change font, aligned text, change color of subheadings and set the font to arial,create random colorizer and opacity

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Makeshift Menu</title>
 </head>
 
-<body>
-    <h1 class="title">Menu ~ Delicious Carb Indulgences</h1>
+<body id="myBodeeh">
+    <h1 class="title" id="textAlign">Menu ~ Delicious Carb Indulgences</h1>
 
     <main class="main">
 
@@ -57,6 +57,6 @@
         </section>
     </footer>
 </body>
-<script src="index.js"></script>
+<script src="script.js"></script>
 
 </html>
